<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.standard_signup_second_screen.StandardSignupSecondActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp">

            <RelativeLayout
                android:id="@+id/back_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20sdp"
                android:paddingRight="@dimen/_50sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back" />


            </RelativeLayout>


            <TextView
                android:id="@+id/create_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/back_rl"
                android:text="@string/create_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
            />


            <TextView
                android:id="@+id/email_second_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_password_tv"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/password_dscp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                />



            <FrameLayout
                android:layout_marginTop="@dimen/_60sdp"
                android:id="@+id/pswd_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_second_tv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pswd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    />

                <TextView
                    android:id="@+id/show_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_et"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:text="@string/show"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                  />
            </FrameLayout>

            <EditText
                android:id="@+id/pswd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pswd_ll"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:singleLine="true"

                android:imeOptions="actionDone"
                android:backgroundTint="@android:color/transparent"
                android:hint="........"
                android:textColorHint="@color/text_color"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                 />


            <View
                android:id="@+id/second_pswd_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_below="@id/pswd_et"
                android:background="@color/text_color" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/blue_theme_color"
            android:gravity="center"
            android:text="@string/next"
            android:id="@+id/next_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />




</RelativeLayout>