<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:weightSum="4"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/logo_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:padding="@dimen/_7sdp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_name_signup"
            android:text="@string/app_name"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/amber_theme_color"

            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_plan_post"
            android:textSize="@dimen/_13ssp"
            android:id="@+id/picture_plan_post_signup_tv"
            android:textColor="@color/black"
            android:layout_gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

    <TextView

        android:id="@+id/fb_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:background="@drawable/facebook_button_shape"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/continue_with_facebook"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textSize="14sp" />




    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/google_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/google_button_shape"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/continue_with_google"
        android:textAlignment="center"
        android:layout_below="@+id/fb_tv"
        android:textColor="@color/blue_theme_color"
        android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
    <TextView
        android:id="@+id/policy_info_tv_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_tv"
        android:text=" fdfdfdff"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_gravity="center"


        />
    <TextView

        android:id="@+id/policy_info_tv_line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/policy_info_tv_line_1"
        android:text="fefefefef"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"

        />
    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
    <TextView

        android:id="@+id/create_account_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="@drawable/create_button_shape"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:layout_below="@+id/policy_info_tv_line_2"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/already_have_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_tv"
        android:text="efefefefefefe"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        />
    </LinearLayout>
</LinearLayout>

