<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.verify_email.VerifyEmailActivity">





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp">

            <RelativeLayout
                android:id="@+id/back_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20sdp"
                android:paddingRight="@dimen/_50sdp"
                android:paddingBottom="@dimen/_15sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back" />


            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/verify_header_rl"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/back_rl"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/verify_header_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/verify_header"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    />


            </RelativeLayout>


            <ImageView
                android:layout_marginTop="@dimen/_90sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/mail_image"
                android:background="@color/amber_theme_color"
                android:layout_below="@id/verify_header_rl"
                />

            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/verify_desp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_image"
                android:layout_alignParentLeft="true"
                android:text="@string/verify_desp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                />

            <TextView
                android:layout_marginTop="@dimen/_60sdp"
                android:id="@+id/verify_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/verify_desp_tv"
                android:layout_alignParentLeft="true"
                android:text="@string/verify_email"
                android:padding="@dimen/_12sdp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                />


</RelativeLayout>
    <TextView
        android:id="@+id/not_received_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text=""
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"

        />
</RelativeLayout>